--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     buildFeatures {
@@ -36,11 +36,11 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion "1.2.1-dev-k1.7.10-27cf0868d10"
+        kotlinCompilerExtensionVersion "1.5.6-dev-k1.9.21-3eed341308a"
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "21"
     }
 
     kapt {
@@ -53,11 +53,6 @@ android {
 }
 
 dependencies {
-    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
-    implementation composeBom
-    androidTestImplementation composeBom
-
-    // Android
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
@@ -65,16 +60,17 @@ dependencies {
     implementation "androidx.core:core-splashscreen:1.1.0-alpha02"
 
     // Compose
-    implementation 'androidx.compose.material3:material3'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    implementation 'androidx.activity:activity-compose'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose'
-    implementation 'androidx.compose.runtime:runtime-livedata'
+    implementation 'androidx.compose.material3:material3:1.2.0-beta01'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.5.4'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.5.4'
+    implementation 'androidx.activity:activity-compose:1.8.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.5.4'
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+    implementation 'com.google.dagger:hilt-android:2.50'
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.1.0'
+    kapt 'com.google.dagger:hilt-compiler:2.50'
 
     // Room
     implementation "androidx.room:room-runtime:2.6.1"
