--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,17 @@
 buildscript {
     ext {
+        kotlin_version = '1.9.21'
         compose_version = '1.2.1'
+
+        dependencies {
+            classpath 'com.android.tools.build:gradle:8.2.0'
+        }
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.3.1' apply false
-    id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.android.application' version '8.2.0' apply false
+    id 'com.android.library' version '8.2.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.21' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
