--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.dagger.hilt.android'
+    id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
 }
 
@@ -40,7 +40,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "21"
+        jvmTarget = "17"
     }
 
     kapt {
@@ -68,9 +68,11 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.5.4'
 
     // Hilt
-    implementation 'com.google.dagger:hilt-android:2.50'
-    implementation 'androidx.hilt:hilt-navigation-fragment:1.1.0'
-    kapt 'com.google.dagger:hilt-compiler:2.50'
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.2.0-alpha01'
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    kapt 'androidx.hilt:hilt-compiler:1.1.0'
+
 
     // Room
     implementation "androidx.room:room-runtime:2.6.1"
