--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,19 @@ buildscript {
     ext {
         kotlin_version = '1.9.21'
         compose_version = '1.2.1'
+        hilt_version = '2.50'
 
         dependencies {
             classpath 'com.android.tools.build:gradle:8.2.0'
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+            classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         }
     }
 }
 
 plugins {
-    id 'com.android.application' version '8.2.0' apply false
-    id 'com.android.library' version '8.2.0' apply false
+    id 'com.android.application' version '8.2.1' apply false
+    id 'com.android.library' version '8.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.21' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
