--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.5.4'
 
     // Hilt
-    implementation 'androidx.hilt:hilt-navigation-fragment:1.2.0-alpha01'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     kapt 'androidx.hilt:hilt-compiler:1.1.0'
