--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ buildscript {
         kotlin_version = '1.9.21'
         compose_version = '1.2.1'
         hilt_version = '2.50'
+        koin_version = '3.5.6'
 
         dependencies {
-            classpath 'com.android.tools.build:gradle:8.2.0'
+            classpath 'com.android.tools.build:gradle:8.2.2'
             classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
             classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         }
@@ -13,8 +14,8 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '8.2.1' apply false
-    id 'com.android.library' version '8.2.1' apply false
+    id 'com.android.application' version '8.5.0' apply false
+    id 'com.android.library' version '8.5.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.21' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
