--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    namespace 'br.com.manoloneto.vnavenda'
+    namespace 'br.com.omanoloneto.vnavenda'
     compileSdk 34
 
     defaultConfig {
-        applicationId "br.com.manoloneto.vnavenda"
+        applicationId "br.com.omanoloneto.vnavenda"
         minSdk 28
         targetSdk 34
         versionCode 1
